completed home, projects, and skills

--- a/main-astro/src/components/Sidebar.astro
+++ b/main-astro/src/components/Sidebar.astro
@@ -6,6 +6,7 @@ import {
     Cpu,
     BriefcaseBusiness,
     Mail,
+    Menu
 } from "@lucide/astro";
 
 import { merge_styles } from '../utils/merge-styles'
@@ -27,7 +28,9 @@ const pathName = Astro.url.pathname
     class="fixed bg-[#25282a] inset-y-0 left-0 z-50 w-64 border-r border-black transform -translate-x-full transition-transform duration-300 ease-in-out lg:translate-x-0 lg:static lg:inset-0"
 >
     <div class="p-5 font-mono">
-        <h1 class="text-2xl font-bold text-[#FFFFF0] px-3">Portfolio</h1>
+        <div class="flex text-2xl font-bold text-[#FFFFF0] px-3">
+            <h1>Portfolio</h1>
+        </div>
         <nav class="mt-10 space-y-1">
             {
                 navItems.map((item) => (
