updated project information and webpage-title

--- a/main-astro/src/layouts/Layout.astro
+++ b/main-astro/src/layouts/Layout.astro
@@ -8,9 +8,8 @@ import Sidebar from "../components/Sidebar.astro";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Will Domine | Portfolio</title>
 	</head>
 	<body class="bg-[#393e42]">
 		<div class="flex min-h-screen min-w-screen">
