--- a/main-astro/src/pages/about.astro
+++ b/main-astro/src/pages/about.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-  <main class="max-w-4xl">
+  <main class="max-w-4xl mt-15 lg:mt-0">
     <header class="mb-10 border-b border-white/10 pb-10">
       <div class="flex items-center gap-2 font-mono text-[11px] text-slate-400 mb-4 tracking-widest uppercase">
         <span>root</span><span class="text-slate-400">/</span>
@@ -72,19 +72,19 @@ import Layout from "../layouts/Layout.astro";
           <ul class="space-y-6 font-mono text-[11px]">
             <li>
               <span class="text-[#FFFF30] block mb-1">UNIVERSITY</span>
-              <span class="text-slate-400">UW-Whitewater</span>
+              <span class="text-[#FFFFF0]">UW-Whitewater</span>
             </li>
             <li>
               <span class="text-[#FFFF30] block mb-1">MAJOR</span>
-              <span class="text-slate-400">Computer Science</span>
+              <span class="text-[#FFFFF0]">Computer Science</span>
             </li>
             <li>
               <span class="text-[#FFFF30] block mb-1">MINOR</span>
-              <span class="text-slate-400">Cybersecurity</span>
+              <span class="text-[#FFFFF0]">Cybersecurity</span>
             </li>
             <li>
               <span class="text-[#FFFF30] block mb-1">EXPECTED</span>
-              <span class="text-slate-400">December 2026</span>
+              <span class="text-[#FFFFF0]">December 2026</span>
             </li>
           </ul>
         </div>
