--- a/main-astro/src/pages/experience.astro
+++ b/main-astro/src/pages/experience.astro
@@ -4,10 +4,10 @@ import { experiences } from "../utils/experiences";
 ---
 
 <Layout>
-    <main class="max-w-4xl px-0 py-0">
+    <main class="max-w-4xl mt-15 lg:mt-0">
         <div class="relative">
             <div class="absolute top-2 bottom-0 bg-[#393e42]"></div>
-            <header class="mb-8 border-b border-white/10 pb-10">
+            <header class="mb-10 border-b border-white/10 pb-10">
                 <div
                     class="flex items-center gap-2 font-mono text-[11px] text-slate-500 mb-4 tracking-widest uppercase"
                 >
