--- a/main-astro/src/pages/index.astro
+++ b/main-astro/src/pages/index.astro
@@ -5,7 +5,7 @@ import ProjectCard from "../components/ProjectCard.astro";
 ---
 
 <Layout>
-	<section class="space-y-6 py-0">
+	<section class="space-y-6 mt-15 lg:mt-0">
 		<div class="space-y-2">
 			<p
 				class="text-[#FFFF30] font-bold tracking-widest text-sm uppercase"
