--- a/main-astro/src/layouts/Layout.astro
+++ b/main-astro/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import Sidebar from "../components/Sidebar.astro";
 		<div class="flex min-h-screen min-w-screen">
 			<Sidebar />
 			<main class="flex-1 min-w-0 h-screen overflow-y-auto">
-				<div class="max-w-7xl mx-auto p-6 lg:p-12">
+				<div class="max-w-7xl p-6 lg:p-12">
 					<slot />
 				</div>
 			</main>
