--- a/main-astro/src/components/ProjectCard.astro
+++ b/main-astro/src/components/ProjectCard.astro
@@ -15,7 +15,7 @@ const tech_list = tech || [];
 ---
 
 <div
-    class="group flex flex-col w-full lg:w-80 h-80 bg-[#1a1c1e] border border-white/5 rounded-2xl overflow-hidden hover:border-[#FFFF30]/50 transition-all duration-300 hover:shadow-[0_8px_30px_rgb(0,0,0,0.4)]"
+    class="group flex flex-col w-full h-80 bg-[#1a1c1e] border border-white/5 rounded-2xl overflow-hidden hover:border-[#FFFF30]/50 transition-all duration-300 hover:shadow-[0_8px_30px_rgb(0,0,0,0.4)]"
 >
     <div class="relative h-48 w-full overflow-hidden bg-black/20">
         <img
